[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/ConstructScreen/ConstructScreen.gd" type="Script" id=1]
[ext_resource path="res://scripts/AnimationContainer.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/myfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/Frame.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Minecraft.ttf"

[sub_resource type="DynamicFont" id=2]
size = 72
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = SubResource( 1 )

[node name="ConstructScreen" type="Control"]
margin_right = 1024.0
margin_bottom = 768.0
script = ExtResource( 1 )

[node name="Level" type="Label" parent="."]
margin_left = 20.0
margin_top = 17.0
margin_right = 77.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 3 )
text = "level"

[node name="Money" type="Label" parent="."]
margin_left = 20.0
margin_top = 73.0
margin_right = 78.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 3 )
text = "money"

[node name="CartContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -324.0
margin_right = 200.0
margin_bottom = 76.0
script = ExtResource( 2 )

[node name="RamContainer" type="CenterContainer" parent="."]
margin_left = 105.0
margin_top = 475.0
margin_right = 255.0
margin_bottom = 625.0
script = ExtResource( 2 )

[node name="FireContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 91.0
margin_right = 75.0
margin_bottom = 241.0
script = ExtResource( 2 )

[node name="CannonContainer" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -255.0
margin_top = 91.0
margin_right = -105.0
margin_bottom = 241.0
script = ExtResource( 2 )

[node name="RamFrame" parent="." instance=ExtResource( 4 )]
position = Vector2( 180, 550 )
scale = Vector2( 0.3, 0.3 )
centered = false

[node name="FireFrame" parent="." instance=ExtResource( 4 )]
position = Vector2( 512, 550 )
scale = Vector2( 0.3, 0.3 )

[node name="CannonFrame" parent="." instance=ExtResource( 4 )]
position = Vector2( 844, 550 )
scale = Vector2( 0.3, 0.3 )

[node name="Go" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.5
margin_top = -108.0
margin_right = 78.5
margin_bottom = -36.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "GO!"
align = 1

[connection signal="pressed" from="RamFrame" to="." method="_on_RamFrame_pressed"]
[connection signal="pressed" from="FireFrame" to="." method="_on_FireFrame_pressed"]
[connection signal="pressed" from="CannonFrame" to="." method="_on_CannonFrame_pressed"]
